--- a/booking/booking.html
+++ b/booking/booking.html
@@ -10,16 +10,16 @@
     </head>
     <body>
         <header>
-            <div><img src="../images/logo.png" alt="Logo of the Museum"></div>
+            <div><a href="../index.html"><img src="../images/logo.png" alt="Logo of the Museum"></a></div>
             <div class="hamburger_menu"><label for="hamburger_menu"><i class="fa-solid fa-bars"><span class="hidden">hamburger menu</span></i></label> </div>
             <input type="checkbox" id="hamburger_menu">
             <nav>
                 <ul>
                     <li> <a href="../index.html"> HOME </a></li>
-                    <li> <a href="../exhibits.html"> EXHIBITS </a> </li>
-                    <li> <a href="../explore.html"> EXPLORE </a></li>
-                    <li> <a href="../getinvolved.html"> GET INVOLVED </a></li>
-                    <li> <a href="../news.html"> NEWS </a></li>
+                    <li> <a href="../events/exhibits.html"> EXHIBITS </a> </li>
+                    <li> <a href="../events/explore.html"> EXPLORE </a></li>
+                    <li> <a href="../events/getinvolved.html"> GET INVOLVED </a></li>
+                    <li> <a href="../events/news.html"> NEWS </a></li>
                     <li> <a href="../about.html"> ABOUT US </a></li>
                     <li> <a href="../contact.html"> CONTACT </a> </li>
                 </ul>
