--- a/booking/success.html
+++ b/booking/success.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <div><img src="../images/logo.png" alt="Logo of the Museum"></div>
+            <div><a href="../index.html"><img src="../images/logo.png" alt="Logo of the Museum"></a></div>
             <div class="hamburger_menu"><label for="hamburger_menu"><i class="fa-solid fa-bars"><span class="hidden">hamburger menu</span></i></label> </div>
             <input type="checkbox" id="hamburger_menu">
             <nav>
@@ -25,8 +25,15 @@
                 </ul>
             </nav>
         </header>
-        <main>
-
+        <main class="success">
+            <h1> Your payment is successfull </h1>
+            <p> Thank you for your purchase. </p>
+            <p> You will receive informations and tickets on your e-mail address. </p>
+            <p> If your tickets have not come to your e-mail, please contact us. </p>
+            <div class="continue">
+                <p> Looking forward to seeing you in our museum. </p>
+            </div>
+               <a href="../events/exhibits.html"> <input type="button" value="Go Back" class="checkout_buttons"></a>
         </main>
         <footer>
 
