--- a/index.html
+++ b/index.html
@@ -75,6 +75,26 @@
             
         </main>
         <footer>
+            <section>
+                <div class="newsletter">
+                    <label for="email">e-mail for newsletter</label> <br>
+                    <input type="text" name="email" id="email"> <br>
+                    <input type="button" value="Sign in" class="signin">
+                </div>
+                <div class="icons_sm">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-square-twitter"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+                <div>
+                    <input type="button" value="Donate" class="donate_button">
+                </div>
+                <div>
+                   <p>Holmen gata 14, 1090 Oslo </p> 
+                   <p>Opening hours: Monday: Closed <br> Tuesday-Friday: 10h-20h <br> Saturday-Sunday: 11h-19h</p>
+                </div>
+                <p> &#169; SciMuse 2022 </p>
+            </section>
 
         </footer>
     </body>
