--- a/booking/booking.html
+++ b/booking/booking.html
@@ -35,7 +35,28 @@
             </div>
         </main>
         <footer>
-
+            <section>
+                <div class="newsletter">
+                    <label for="email">e-mail for newsletter</label> <br>
+                    <div>
+                        <input type="text" name="email" id="email">
+                        <input type="button" value="Sign in" class="signin">
+                    </div>
+                </div>
+                <div class="icons_sm">
+                    <p> <a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></p>
+                    <p> <a href="https://twitter.com"><i class="fa-brands fa-square-twitter"></i></a></p>
+                    <p> <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin"></i></a></p>
+                </div>
+                <div>
+                    <a href="../events/getinvolved.html"><input type="button" value="Donate" class="donate_button"></a>
+                </div>
+                <div>
+                   <p>Holmen gata 14, 1090 Oslo </p> 
+                   <p>Opening hours: Monday: Closed <br> Tuesday-Friday: 10h-20h <br> Saturday-Sunday: 11h-19h</p>
+                </div>
+                <p> &#169; SciMuse 2022 </p>
+            </section>
         </footer>
     </body>
 </html>
