--- a/index.html
+++ b/index.html
@@ -72,22 +72,23 @@
                         <p>Read more</p>
                     </div>
                 </section>
-            
         </main>
         <footer>
             <section>
                 <div class="newsletter">
                     <label for="email">e-mail for newsletter</label> <br>
-                    <input type="text" name="email" id="email"> <br>
-                    <input type="button" value="Sign in" class="signin">
+                    <div>
+                        <input type="text" name="email" id="email">
+                        <input type="button" value="Sign in" class="signin">
+                    </div>
                 </div>
                 <div class="icons_sm">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-square-twitter"></i>
-                    <i class="fa-brands fa-linkedin"></i>
+                    <p> <a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></p>
+                    <p> <a href="https://twitter.com"><i class="fa-brands fa-square-twitter"></i></a></p>
+                    <p> <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin"></i></a></p>
                 </div>
                 <div>
-                    <input type="button" value="Donate" class="donate_button">
+                    <a href="events/getinvolved.html"><input type="button" value="Donate" class="donate_button"></a>
                 </div>
                 <div>
                    <p>Holmen gata 14, 1090 Oslo </p> 
@@ -95,7 +96,6 @@
                 </div>
                 <p> &#169; SciMuse 2022 </p>
             </section>
-
         </footer>
     </body>
 </html>
