--- a/events/getinvolved.html
+++ b/events/getinvolved.html
@@ -27,8 +27,9 @@
         </header>
         <main>
             <h1 class="getinvolved" > Get Involved </h1>
-            <img src="../images/library1.jpg" alt="Photo of our library" class="background_image">
+            <section class="get_involved">
             <div>
+                <img src="../images/donations.webp" alt="All kinds of donations on the picture" class="background_image">
                 <h2 class="heading"> Support </h2>
                 <p> There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the whole community. </p>
                 <p> You can also support us by donating items of interest to the museums collections. If you have some item or collection that you think others would enjoy, please let us know by contacting our Collections Department and they will be able to assist you. </p>
@@ -46,6 +47,7 @@
                 <p> You will be learning from a number of different academics and people who are passionate about science and sharing it with the wider community. </p>
                 <p> If you are that person, feel free to contact us or come and visit us.</p>
             </div>
+        </section>
         </main>
         <footer>
             <section>
