--- a/events/news.html
+++ b/events/news.html
@@ -25,26 +25,34 @@
                 </ul>
             </nav>
         </header>
-        <main>
+        <main >
             <section> 
                 <section class="news_page_background"><div class="news_events"> <h1> News // Events </h1> </div></section>
             </section>
-            <h2 class="heading_news"> Visiting Professor of Aeronautics </h2>
-            <img src="../images/aeronautics1.jpg" alt="Man with helmet sitting in front of " class="background_image">
-            <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting “space”. </p>
-            <p> Soon more informations about the event. </p>
-            <img src="../images/moon1.jpg" alt="All moon shapes" class="background_image">
-            <section> 
-                <section class="news_page_nightinthemuseum"><div > <h2> Night in the Museum </h2> </div> </section>
-            </section>
-            <p>Get your family together for an exciting night in the museum as you sleep over bedside dinosaurs and science displays.Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science. </p>
-            <p> From January, once a month, second thursday in the month. See you! </p>
-            <img src="../images/lab.jpg" alt="Sketch in drawing of a lab" class="background_image">
-            <h2 class="heading_news"> Energetica Exhibition on Loan </h2>
-                <img src="../images/science1.jpg" alt="Scientist in front of huge machine" class="background_image">
-            <p> On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming in February to the Community Science Museum.
-                It is a series of installations that allow visitors to experience the power of the elements as we harness them. </p>
-            <p> From solar energy powering lighting, to “Wind Island” that shows how turbines are able to use and control wind to create power </p>
+            <section class="news_display">
+                <div>
+                    <h2 class="heading_news"> Visiting Professor of Aeronautics </h2>
+                    <img src="../images/aeronautics1.jpg" alt="Man with helmet sitting in front of " class="background_image">
+                    <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting “space”. </p>
+                    <p> Soon more informations about the event. </p>
+                </div>
+                    
+                    <img src="../images/lab.jpg" alt="Sketch in drawing of a lab" class="background_image photo"> 
+               <div>
+                    <h2 class="heading_news"> Energetica Exhibition on Loan </h2>
+                    <img src="../images/science1.jpg" alt="Scientist in front of huge machine" class="background_image">
+                    <p> On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming in February to the Community Science Museum.
+                    It is a series of installations that allow visitors to experience the power of the elements as we harness them. </p>
+                    <p> From solar energy powering lighting, to “Wind Island” that shows how turbines are able to use and control wind to create power </p>
+                </div>
+                    <img src="../images/moon1.jpg" alt="All moon shapes" class="background_image photo">
+                <div> 
+                    <h2 class="heading_news"> Night in the Museum </h2>
+                    <img src="../images/nightinthemuseum1.jpg" alt="Night time in the museum" class="background_image">
+                    <p>Get your family together for an exciting night in the museum as you sleep over bedside dinosaurs and science displays.Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science. </p>
+                    <p> From January, once a month, second thursday in the month. See you! </p>
+                </div>
+        </section>
         </main>
         <footer>
             <section>
