--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <div> <img src="images/museum.jpg" alt="Museum from outside" class="background_image"> </div>
             <section class="wrap">
             <div><input type="button" value="Visit Our Exhibition" class="homepage_button"></div>
-                <section class="container">
+            <section class="exhibit_home_display">
+            <section class="container">
                     <div>
                         <h2>COSMOLOGY</h2>
                         <p>Read more</p>
@@ -56,7 +57,7 @@
                         <img src="images/ecology1.jpg" alt="Trees above head, pointing to the sky" class="add_image">
                     </div>
                 </section>
-            </section>
+            </section> 
             <section class="news_heading">
                 <h2>NEWS</h2>
                 </section>
