--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,9 @@
             <p> There are guided tours of the museum that leave every hour. </p>
             <p> You do not need to book it, writing yourself on the list is done by the entrance, includes a handy printed guide of the museum and costs 70nok. </p>
             <p> If you want to organise a guided tour for your group of 6 or more people, please contact us to arrange the tour. </p>
+           <section class="coffe_shop">
             <img src="images/cafe1.jpg" alt="Coffee place in the museum" class="background_image_2">
-            <section class="divided">
+            <div class="divided">
                 <div class="left_side">
                     <h2> Food and drink </h2>
                     <p> There is cafe attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more. </p>
@@ -40,20 +41,27 @@
                     <h2> Shop </h2>
                     <p> Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you have left the museum. </p>
                 </div>
-            </section>
-            <div class="colored_contact">
-            <img src="images/open1.jpg" alt="Sign for open" class="background_image">
-                <p> Monday: Closed <br> Tuesday: 10h-20h <br> Wednesday: 10h-20h <br> Thursday: 10h-20h <br> 
-                    Friday: 10h-20h <br> Saturday: 11h-19h <br> Sunday: 11h-19h </p>
             </div>
+            </section>
+            <section class="open_hours">
+            <div class="colored_contact info">
+                <img src="images/open1.jpg" alt="Sign for open" class="background_image">
+                    <p> Monday: Closed </p>
+                    <p> Tuesday-Friday 10h-20h </p>
+                    <p> Saturday-Sunday 11h-19h </p>
+                </div>
+                <div class="info">
             <div>
                 <p> For more informations you can: </p>
                 <p> E-mail us: <br> scimuse@community.com </p>
                 <p> Or give us a call: <br> 96 99 66 69 </p>
+                <p class="address"> Our address is <br> Holmen gata 14 <br> 1090 Oslo </p>
             </div>
-            <div class="colored_contact">
+            <div class="colored_contact adress">
                 <p> Our address is <br> Holmen gata 14 <br> 1090 Oslo </p>
             </div>
+        </div>
+        </section>
         </main>
         <footer>
             <section>
