--- a/events/exhibits.html
+++ b/events/exhibits.html
@@ -28,6 +28,7 @@
         <main>
             <img src="../images/museumhall.jpg" alt="Museum hall with exhibits" class="background_image">
             <div class="background_line"> <h1> Choose Event for you, and book a ticket now </h1> </div>
+            <section class="exhibit_display">
             <div>
                 <img src="../images/skyandstars1.jpg" alt="Universe sky and stars" class="background_image">
                 <p> Explore the wonders of our cosmos. Our fantastic exhibition, “The Sky Above Us”, explores the night sky and what we can see and know about the universe around us. We will locate the various constellations and galaxies that can be seen and learn a bit about the early navigators who used the stars to travel by. 
@@ -47,18 +48,19 @@
                 <a href="../booking/booking.html"><input type="button" value="Book a ticket" class="book_ticket"></a>
             </div>
             <div>
+                <img src="../images/mammoth1.jpg" alt="Mamooth exhibit in the museum" class="background_image">
+                <p> For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here? SinceDarwin proposed his theory of evolution we have had a framework for exploring and understanding our place in this world.
+                    Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who did not survive, including our Wolly Mammoth, the Dodos and a number of dinosaurs too. </p>
+               <a href="../booking/booking.html"><input type="button" value="Book a ticket" class="book_ticket"></a>
+            </div>
+            <div>
                 <img src="../images/biologyandmedicine1.jpg" alt="doll exhibit of a human body" class="background_image">
                 <p>From micro-organism to the human body, major breaktroughs in biology are offering us unique insights into the great wonders of the tiny world.
                     For many people their life expectancy is much longer and their quality of life much improved, thanks to the growth of our understanding of medicine. Over a series of exhibits we explore the history of medicine and take a look at some major breakthroughs including the discovery of penicilin and the first heart transplant.
                     Many of our great medicinal discoveries have come not only from the lab, but also from observing animals in the wild. Often our fellow creatures have beat us to it.</p>
                 <a href="../booking/booking.html"><input type="button" value="Book a ticket" class="book_ticket"></a>
             </div>
-            <div>
-                <img src="../images/mammoth1.jpg" alt="Mamooth exhibit in the museum" class="background_image">
-                <p> For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here? SinceDarwin proposed his theory of evolution we have had a framework for exploring and understanding our place in this world.
-                    Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who did not survive, including our Wolly Mammoth, the Dodos and a number of dinosaurs too. </p>
-               <a href="../booking/booking.html"><input type="button" value="Book a ticket" class="book_ticket"></a>
-            </div>
+        </section>
         </main>
         <footer>
             <section>
