--- a/events/explore.html
+++ b/events/explore.html
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
         </header>
-        <main >
+        <main class="explore">
             <h1 class="main_heading"> Explore </h1> 
             <section class="explore_page">
               <div class="one">
@@ -34,10 +34,10 @@
                     <p> Are you a young person looking to learn more about science? Come on down to our museum, there is plenty to see and do. </p>
                     <p> You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Wolly Mamooth? Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore. </p>
                     <img src="../images/youngstarclub.jpg" alt="Kids hands on a paper with water colors" class="background_image">
-                    <h3 class="heading"> Young Star Club </h3>
-                    <p> We also have a Young Stars club which meets once a week on a Saturday between 10:oo and 13:00 where you will get to wxplore and experiment with our team of experts.
-                        During the scool holidays we run special holiday clubs where you can join other children your age to go on a journe of discovery. Each holiday we pick a new theme to explore. </p>
-                    <p> To find out more about holiday club and how you can join, send us a message.</p>
+                    <h3 class="heading"> Young Star & Holiday Club </h3>
+                    <p> We also have a Young Stars club which meets once a week on a Saturday between 10:oo and 13:00 where you will get to wxplore and experiment with our team of experts.</p>
+                       <p> During the scool holidays we run special holiday clubs where you can join other children your age to go on a journe of discovery. Each holiday we pick a new theme to explore. </p>
+                    <p> To find out more about them and how you can join, send us a message.</p>
                 </div>
                 <div>
                     <img src="../images/ajnstajn1.jpg" alt="Albert Ainstains grafit on the wall" class="background_image">
