--- a/events/getinvolved.html
+++ b/events/getinvolved.html
@@ -26,6 +26,7 @@
             </nav>
         </header>
         <main>
+            <img src="../images/handshake.png" alt="Handshake improvised " class="background_image">
             <h1 class="getinvolved" > Get Involved </h1>
             <section class="get_involved">
             <div>
