--- a/about.html
+++ b/about.html
@@ -30,9 +30,17 @@
             <p> Come  join us at the SciMuse, where we are commited to making science accessible to all. </p>
             <p> Over the course of human history, science has developed from our early understanding of fire, wind, water and earth to exploring everything from galaxies far away to the very building blocks of life itself. </p>
             <p> The aim of our museum is to create a space where everyone can experience and perhaps even ignite a lifelong passion to continue exploration of the world around us. </p>
-            <img src="images/pink.jpg" alt="Electricity in pink" class="background_image">
-            <p> We believe science should not be confined to the textbook, but brought to life through exhibits. This is why we have over 1000 different exhibits on the many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from dinosaur exibits - they only come to life at night when everyone  has gone home). </p>
-        <div class="access">
+            <div class="purple">
+                <div>
+                <img src="images/pink.jpg" alt="Electricity in pink" class="background_image">
+                </div>
+                <div class="center">
+                <p> We believe science should not be confined to the textbook, but brought to life through exhibits. </p>
+                <p>This is why we have over 1000 different exhibits on the many varied subjects of science to explore.</p>
+                <p> Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from dinosaur exibits - they only come to life at night when everyone  has gone home). </p>
+            </div>
+        </div>
+            <div class="access">
             <img src="images/accessibility.png" alt="Accessibility helps in our museum, hearing, seeing, wheelchair" class="background_image">
             <h2 class="heading_news"> Accessibility </h2>
             <p> The museum has a wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired. </p>
