--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="hamburger_menu"><label for="hamburger_menu"><i class="fa-solid fa-bars"><span class="hidden">hamburger menu</span></i></label> </div>
             <input type="checkbox" id="hamburger_menu">
             <nav>
-                <ul>
+                <ul >
                     <li> <a href="index.html" class="active"> HOME </a></li>
                     <li> <a href="events/exhibits.html"> EXHIBITS </a> </li>
                     <li> <a href="events/explore.html"> EXPLORE </a></li>
@@ -26,7 +26,7 @@
             </nav>
         </header>
         <main>
-            <div> <img src="images/museum.jpg" alt="Museum from outside" class="background_image"> </div>
+            <div> <img src="images/museum.jpg" alt="Museum from outside" class="background_image museum"> </div>
             <section class="wrap">
             <div><input type="button" value="Visit Our Exhibition" class="homepage_button"></div>
             <section class="exhibit_home_display">
