--- a/booking/success.html
+++ b/booking/success.html
@@ -34,11 +34,11 @@
                 <p> Looking forward to seeing you in our museum. </p>
             </div>
                <a href="../events/exhibits.html"> <input type="button" value="Go Back" class="checkout_buttons"></a>
-        </main>
+    </main>
         <footer>
             <section>
                 <div class="newsletter">
-                    <label for="email">e-mail for newsletter</label> <br>
+                    <label for="email">Leave your e-mail and subscribe for newsletter:</label> <br>
                     <div>
                         <input type="text" name="email" id="email">
                         <input type="button" value="Sign in" class="signin">
