--- a/events/news.html
+++ b/events/news.html
@@ -27,12 +27,13 @@
         </header>
         <main >
             <section> 
-                <section class="news_page_background"><div class="news_events"> <h1> News // Events </h1> </div></section>
+                <section class="news_page_background"></section>
             </section>
+            <h1 class="heading_news"> News // Events </h1>
             <section class="news_display">
                 <div>
                     <h2 class="heading_news"> Visiting Professor of Aeronautics </h2>
-                    <img src="../images/aeronautics1.jpg" alt="Man with helmet sitting in front of " class="background_image">
+                    <img src="../images/visitingprof2.jpg" alt="Man with helmet sitting in front of " class="background_image">
                     <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting “space”. </p>
                     <p> Soon more informations about the event. </p>
                 </div>
@@ -57,7 +58,7 @@
         <footer>
             <section>
                 <div class="newsletter">
-                    <label for="email">e-mail for newsletter</label> <br>
+                    <label for="email">Leave your e-mail and subscribe for newsletter:</label> <br>
                     <div>
                         <input type="text" name="email" id="email">
                         <input type="button" value="Sign in" class="signin">
