--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </nav>
         </header>
         <main>
-            <div> <img src="images/museum.jpg" alt="Museum from outside" class="background_image museum"> </div>
+            <div> <img src="images/museum-3.jpg" alt="Museum from outside" class="background_image museum"> </div>
             <section class="wrap">
             <div><input type="button" value="Visit Our Exhibition" class="homepage_button"></div>
             <section class="exhibit_home_display">
@@ -63,7 +63,7 @@
                 </section>
                 <section class="news">
                     <div class="wrap_box">
-                        <img src="images/aeronautics1.jpg" alt="Man inside of a " class="news_image">
+                        <img src="images/visitingprof2.jpg" alt="Man inside of a " class="news_image">
                         <h3>Visiting Professor of Aeronautics</h3>
                         <p>Read more</p>
                     </div>
@@ -77,10 +77,10 @@
         <footer>
             <section>
                 <div class="newsletter">
-                    <label for="email">e-mail for newsletter</label> <br>
+                    <label for="email">Leave your e-mail and subscribe for newsletter:</label><br>
                     <div>
                         <input type="text" name="email" id="email">
-                        <input type="button" value="Sign in" class="signin">
+                        <input type="button" value="Subscribe" class="signin">
                     </div>
                 </div>
                 <div class="icons_sm">
