--- a/events/explore.html
+++ b/events/explore.html
@@ -56,7 +56,7 @@
         <footer>
             <section>
                 <div class="newsletter">
-                    <label for="email">e-mail for newsletter</label> <br>
+                    <label for="email">Leave your e-mail and subscribe for newsletter:</label> <br>
                     <div>
                         <input type="text" name="email" id="email">
                         <input type="button" value="Sign in" class="signin">
